# serializer version: 1
# name: test_contains_geometry[session-tracked-point-within-geometry-polygon-async-asyncpg_engine]
  '''
  SELECT ST_AsEWKB(geos_fields.geometry) AS geometry,
         geos_fields.id
    FROM geos_fields AS geos_fields
   WHERE ST_Contains(geos_fields.geometry, ST_GeomFromGeoJSON($1::VARCHAR))
  '''
# ---
# name: test_contains_geometry[session-tracked-point-within-geometry-polygon-async-psycopg_async_engine]
  '''
  SELECT ST_AsEWKB(geos_fields.geometry) AS geometry,
         geos_fields.id
    FROM geos_fields AS geos_fields
   WHERE ST_Contains(geos_fields.geometry, ST_GeomFromGeoJSON(%(ST_GeomFromGeoJSON_1)s::VARCHAR))
  '''
# ---
# name: test_contains_geometry[session-tracked-point-within-geometry-polygon-sync-psycopg_engine]
  '''
  SELECT ST_AsEWKB(geos_fields.geometry) AS geometry,
         geos_fields.id
    FROM geos_fields AS geos_fields
   WHERE ST_Contains(geos_fields.geometry, ST_GeomFromGeoJSON(%(ST_GeomFromGeoJSON_1)s::VARCHAR))
  '''
# ---
# name: test_contains_geometry[session-tracked-point-within-multipolygon-async-asyncpg_engine]
  '''
  SELECT ST_AsEWKB(geos_fields.multi_polygon) AS multi_polygon,
         geos_fields.id
    FROM geos_fields AS geos_fields
   WHERE ST_Contains(geos_fields.multi_polygon, ST_GeomFromGeoJSON($1::VARCHAR))
  '''
# ---
# name: test_contains_geometry[session-tracked-point-within-multipolygon-async-psycopg_async_engine]
  '''
  SELECT ST_AsEWKB(geos_fields.multi_polygon) AS multi_polygon,
         geos_fields.id
    FROM geos_fields AS geos_fields
   WHERE ST_Contains(geos_fields.multi_polygon, ST_GeomFromGeoJSON(%(ST_GeomFromGeoJSON_1)s::VARCHAR))
  '''
# ---
# name: test_contains_geometry[session-tracked-point-within-multipolygon-sync-psycopg_engine]
  '''
  SELECT ST_AsEWKB(geos_fields.multi_polygon) AS multi_polygon,
         geos_fields.id
    FROM geos_fields AS geos_fields
   WHERE ST_Contains(geos_fields.multi_polygon, ST_GeomFromGeoJSON(%(ST_GeomFromGeoJSON_1)s::VARCHAR))
  '''
# ---
# name: test_contains_geometry[session-tracked-point-within-polygon-async-asyncpg_engine]
  '''
  SELECT ST_AsEWKB(geos_fields.polygon) AS
  POLYGON,
         geos_fields.id
    FROM geos_fields AS geos_fields
   WHERE ST_Contains(geos_fields.polygon, ST_GeomFromGeoJSON($1::VARCHAR))
  '''
# ---
# name: test_contains_geometry[session-tracked-point-within-polygon-async-psycopg_async_engine]
  '''
  SELECT ST_AsEWKB(geos_fields.polygon) AS
  POLYGON,
         geos_fields.id
    FROM geos_fields AS geos_fields
   WHERE ST_Contains(geos_fields.polygon, ST_GeomFromGeoJSON(%(ST_GeomFromGeoJSON_1)s::VARCHAR))
  '''
# ---
# name: test_contains_geometry[session-tracked-point-within-polygon-sync-psycopg_engine]
  '''
  SELECT ST_AsEWKB(geos_fields.polygon) AS
  POLYGON,
         geos_fields.id
    FROM geos_fields AS geos_fields
   WHERE ST_Contains(geos_fields.polygon, ST_GeomFromGeoJSON(%(ST_GeomFromGeoJSON_1)s::VARCHAR))
  '''
# ---
# name: test_is_null[session-tracked-async-asyncpg_engine]
  '''
  SELECT ST_AsEWKB(geos_fields.point) AS POINT,
         geos_fields.id
    FROM geos_fields AS geos_fields
   WHERE geos_fields.point IS NULL
  '''
# ---
# name: test_is_null[session-tracked-async-psycopg_async_engine]
  '''
  SELECT ST_AsEWKB(geos_fields.point) AS POINT,
         geos_fields.id
    FROM geos_fields AS geos_fields
   WHERE geos_fields.point IS NULL
  '''
# ---
# name: test_is_null[session-tracked-sync-psycopg_engine]
  '''
  SELECT ST_AsEWKB(geos_fields.point) AS POINT,
         geos_fields.id
    FROM geos_fields AS geos_fields
   WHERE geos_fields.point IS NULL
  '''
# ---
# name: test_no_filtering[session-tracked-async-asyncpg_engine]
  '''
  SELECT geos_fields.id
    FROM geos_fields AS geos_fields
  '''
# ---
# name: test_no_filtering[session-tracked-async-psycopg_async_engine]
  '''
  SELECT geos_fields.id
    FROM geos_fields AS geos_fields
  '''
# ---
# name: test_no_filtering[session-tracked-sync-psycopg_engine]
  '''
  SELECT geos_fields.id
    FROM geos_fields AS geos_fields
  '''
# ---
# name: test_within_geometry[session-tracked-linestring-within-polygon-async-asyncpg_engine]
  '''
  SELECT ST_AsEWKB(geos_fields.line_string) AS line_string,
         geos_fields.id
    FROM geos_fields AS geos_fields
   WHERE ST_Within(geos_fields.line_string, ST_GeomFromGeoJSON($1::VARCHAR))
  '''
# ---
# name: test_within_geometry[session-tracked-linestring-within-polygon-async-psycopg_async_engine]
  '''
  SELECT ST_AsEWKB(geos_fields.line_string) AS line_string,
         geos_fields.id
    FROM geos_fields AS geos_fields
   WHERE ST_Within(geos_fields.line_string, ST_GeomFromGeoJSON(%(ST_GeomFromGeoJSON_1)s::VARCHAR))
  '''
# ---
# name: test_within_geometry[session-tracked-linestring-within-polygon-sync-psycopg_engine]
  '''
  SELECT ST_AsEWKB(geos_fields.line_string) AS line_string,
         geos_fields.id
    FROM geos_fields AS geos_fields
   WHERE ST_Within(geos_fields.line_string, ST_GeomFromGeoJSON(%(ST_GeomFromGeoJSON_1)s::VARCHAR))
  '''
# ---
# name: test_within_geometry[session-tracked-multipoint-within-polygon-async-asyncpg_engine]
  '''
  SELECT ST_AsEWKB(geos_fields.multi_point) AS multi_point,
         geos_fields.id
    FROM geos_fields AS geos_fields
   WHERE ST_Within(geos_fields.multi_point, ST_GeomFromGeoJSON($1::VARCHAR))
  '''
# ---
# name: test_within_geometry[session-tracked-multipoint-within-polygon-async-psycopg_async_engine]
  '''
  SELECT ST_AsEWKB(geos_fields.multi_point) AS multi_point,
         geos_fields.id
    FROM geos_fields AS geos_fields
   WHERE ST_Within(geos_fields.multi_point, ST_GeomFromGeoJSON(%(ST_GeomFromGeoJSON_1)s::VARCHAR))
  '''
# ---
# name: test_within_geometry[session-tracked-multipoint-within-polygon-sync-psycopg_engine]
  '''
  SELECT ST_AsEWKB(geos_fields.multi_point) AS multi_point,
         geos_fields.id
    FROM geos_fields AS geos_fields
   WHERE ST_Within(geos_fields.multi_point, ST_GeomFromGeoJSON(%(ST_GeomFromGeoJSON_1)s::VARCHAR))
  '''
# ---
# name: test_within_geometry[session-tracked-point-within-polygon-async-asyncpg_engine]
  '''
  SELECT ST_AsEWKB(geos_fields.point) AS POINT,
         geos_fields.id
    FROM geos_fields AS geos_fields
   WHERE ST_Within(geos_fields.point, ST_GeomFromGeoJSON($1::VARCHAR))
  '''
# ---
# name: test_within_geometry[session-tracked-point-within-polygon-async-psycopg_async_engine]
  '''
  SELECT ST_AsEWKB(geos_fields.point) AS POINT,
         geos_fields.id
    FROM geos_fields AS geos_fields
   WHERE ST_Within(geos_fields.point, ST_GeomFromGeoJSON(%(ST_GeomFromGeoJSON_1)s::VARCHAR))
  '''
# ---
# name: test_within_geometry[session-tracked-point-within-polygon-sync-psycopg_engine]
  '''
  SELECT ST_AsEWKB(geos_fields.point) AS POINT,
         geos_fields.id
    FROM geos_fields AS geos_fields
   WHERE ST_Within(geos_fields.point, ST_GeomFromGeoJSON(%(ST_GeomFromGeoJSON_1)s::VARCHAR))
  '''
# ---
